--- a/frontend/test.html
+++ b/frontend/test.html
@@ -4,110 +4,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Token Manager Interface</title>
-    <!-- Include web3.js library -->
-    <script src="https://cdn.jsdelivr.net/npm/web3@1.5.2/dist/web3.min.js"></script>
+    <title>Beast Finance - portal</title>
+
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            /* background-image: url('blue-beast.jpeg'); */
+            background-image: url('https://img.freepik.com/free-vector/cute-monster-kid-cartoon-vector-icon-illustration-monster-holiday-icon-concept-isolated-premium-vector-flat-cartoon-style_138676-3995.jpg?w=826&t=st=1707230554~exp=1707231154~hmac=6b8ec85c7fdba69cfeb25d2ba28609ed06e6a3618e83fc0a5ec618a997b9314e');
+            background-size: 80% 400%;
+            background-position: 50% 5%;
+            font-family: Arial, sans-serif;
+            color: #fff;
+        }
+
+        h1 {
+            text-align: center;
+            margin-top: 50px;
+            color: hsl(259, 100%, 50%);
+        }
+
+        button {
+            margin: 10px;
+            padding: 10px;
+            font-size: 16px;
+            cursor: pointer;
+            background-color: hsl(225, 70%, 53%);
+            /* Set button color */
+            color: #fff;
+            /* Set button text color */
+            border: none;
+            border-radius: 10px;
+        }
+
+        button:hover {
+            background-color: hsl(102, 64%, 44%);
+            /* Set button color on hover */
+        }
+
+        div {
+            text-align: center;
+            margin-top: 20px;
+        }
+    </style>
 </head>
 
+
+
 <body>
-    <h1>Token Manager Interface</h1>
 
-    <label for="toAddress">To Address:</label>
-    <input type="text" id="toAddress" placeholder="Recipient's address">
+    <h1>Web3 frontend sandbox...</h1>
 
-    <label for="amount">Amount:</label>
-    <input type="text" id="amount" placeholder="Amount">
-
-
-    <!-- Buttons HERE -->
-    <button onclick="connectWallet()">Connect Your Wallet</button>
-    <button onclick="transferReward()">Transfer Reward</button>
+    <div>
+        <button onclick="connectWallet()">Connect Your Wallet</button>
+    </div>
+    <div>
+        <button onclick="deposit()">Deposit ETH</button>
+        <button onclick="withdraw()">Withdraw</button>
+    </div>
 
 
-    <!-- Script starts HERE -->
+
+    <!-- import Web3.js -->
     <script src="https://cdn.jsdelivr.net/npm/web3@1.6.0/dist/web3.min.js"></script>
 
     <script>
+        // let web3;
 
-        import Web3 from 'web3';
-
-        const web3 = new Web3("https://testnet.aurora.dev");
-
-        // Replace with your TokenManager contract address
-        const contractAddress = '0xb136843F392dd2f174063ee469a875F642444146';
-        const contractABI = [
-            {
-                "inputs": [],
-                "stateMutability": "nonpayable",
-                "type": "constructor"
-            },
-            {
-                "inputs": [],
-                "name": "owner",
-                "outputs": [
-                    {
-                        "internalType": "address",
-                        "name": "",
-                        "type": "address"
-                    }
-                ],
-                "stateMutability": "view",
-                "type": "function"
-            },
-            {
-                "inputs": [],
-                "name": "rewardTokenAddress",
-                "outputs": [
-                    {
-                        "internalType": "address",
-                        "name": "",
-                        "type": "address"
-                    }
-                ],
-                "stateMutability": "view",
-                "type": "function"
-            },
-            {
-                "inputs": [
-                    {
-                        "internalType": "address",
-                        "name": "_rewardTokenAddress",
-                        "type": "address"
-                    }
-                ],
-                "name": "setRewardTokenAddress",
-                "outputs": [],
-                "stateMutability": "nonpayable",
-                "type": "function"
-            },
-            {
-                "inputs": [
-                    {
-                        "internalType": "address",
-                        "name": "_to",
-                        "type": "address"
-                    },
-                    {
-                        "internalType": "uint256",
-                        "name": "_amount",
-                        "type": "uint256"
-                    }
-                ],
-                "name": "transferReward",
-                "outputs": [],
-                "stateMutability": "nonpayable",
-                "type": "function"
-            }
-        ]
-
-        const contract = new web3.eth.Contract(contractABI, contractAddress);
-
-        // Connect to a web3 provider - Metamask
         async function connectWallet() {
             if (window.ethereum) {
                 try {
-                    await window.ethereum.enable();
-                    web3 = new Web3(window.ethereum);
+                    // await window.ethereum.enable();
+                    await window.ethereum.request({ method: 'eth_requestAccounts' });
+
+                    const auroraRpcEndpoint = 'https://testnet.aurora.dev';
+                    web3 = new Web3(new Web3.providers.HttpProvider(auroraRpcEndpoint));
+                    // web3 = new Web3(window.ethereum);
+
                     console.log("Connected to wallet:", web3.currentProvider.selectedAddress);
                 } catch (error) {
                     console.error("Error connecting to wallet:", error);
@@ -117,25 +90,21 @@
             }
         }
 
-        // make the call to transferReward()
-        async function transferReward() {
-            const toAddress = document.getElementById('toAddress').value;
-            const amount = document.getElementById('amount').value;
+        async function deposit() {
+            const contractAddress = 'YOUR_CONTRACT_ADDRESS'; // Replace with your actual contract address
+            const contractABI = YOUR_CONTRACT_ABI; // Replace with your actual contract ABI
+
+            const contract = new web3.eth.Contract(contractABI, contractAddress);
 
             try {
-                const accounts = await web3.eth.requestAccounts();
-                const account = accounts[0];
-
-                const result = await contract.methods.transferReward(toAddress, amount).send({ from: account });
-                console.log(result);
-                alert('Transaction successful!');
+                const accounts = await web3.eth.getAccounts();
+                const result = await contract.methods.withdraw().send({
+                    from: accounts[0]
+                });
+                console.log("Withdrawal transaction successful:", result);
             } catch (error) {
-                console.error(error);
-                alert('Transaction failed. Please check the console for details.');
+                console.error("Error withdrawing:", error);
             }
         }
-    </script>
 
-</body>
-
-</html>
+    
